Avoid a null pointer dereference in avcodec_decode_audio4().

This could happen if oom occured while probing a file.
Fixes ticket #2722.